force-app/main/default/objects/Bolt_Kanban__Logs__c/Bolt_Kanban__Logs__c.object-meta.xml
<CustomObject>
    <label>Bolt Kanban Logs</label>
    <nameField>
        <displayFormat>KB_Logs-{00000000}</displayFormat>
        <label>Bolt Kanban Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bolt Kanban Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>