force-app/main/default/objects/Bolt_Kanban__Logs__c/fields/Bolt_Kanban__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Class_Name__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>