force-app/main/default/objects/Bolt_Kanban__Logs__c/fields/Bolt_Kanban__Developer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Developer_Comments__c</fullName>
    <label>Developer Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>