force-app/main/default/objects/Bolt_Kanban__Logs__c/fields/Bolt_Kanban__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>