force-app/main/default/objects/Bolt_Kanban__Logs__c/fields/Bolt_Kanban__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Line_Number__c</fullName>
    <label>Line Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>