force-app/main/default/objects/Bolt_Kanban__Logs__c/fields/Bolt_Kanban__Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Method_Name__c</fullName>
    <label>Method Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>