force-app/main/default/objects/Bolt_Kanban__Logs__c/fields/Bolt_Kanban__Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>